Updated the media query to avoid horizontal scroll on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -235,18 +235,19 @@ footer a {
 @media (max-width: 960px) {
   header {
     padding: 60px 0;
+    max-width: 960px;
   }
 
-  h1 {
+  header h1 {
     font-size: 48px;
   }
 
-  h2 {
+  header h2 {
     font-size: 20px;
   }
 
-  h3 {
-    font-size: 12px;
+  main h3 {
+    font-size: 25px;
   }
 
   .grid {
